v2.0/yoti/welcome.md
---
type: page
title: Welcome
listed: true
slug: welcome
description: 
index_title: Welcome
hidden: 
keywords: 
tags: 
---

We’re here to help you get your business set up with our secure, digital identity platform using one of our web SDKs or plugins. We also have two seamless mobile SDKs for iOS and Android.

Learn how to integrate our products and services that you and your business will benefit from. For a more detailed, in-depth explanation of each, please read through the following developer docs. 

For a quick start guide, please see our **[API reference documentation](https://www.yoti.com/api-reference)**

---

## Yoti World

For more information on how Yoti can best work for your business, please visit Yoti World and explore some of the demos we've created on our different products.

**[Visit Yoti World](https://yoti.world/)**

---

## Products and services

{% table %}
| Product | Description | 
| ---- | ---- | 
| **[Yoti Hub](https://developers.yoti.com/yoti/getting-started-hub)** | Onboard your organisation with Yoti in minutes. | 
| [Yoti app](https://developers.yoti.com/yoti/getting-started-app) | Connect with already-verified customers. | 
| [Yoti Doc Scan](https://developers.yoti.com/yoti/getting-started-docscan) | Identity verification embedded in your website or app. | 
| [Yoti Age Scan](https://developers.yoti.com/yoti/getting-started-agescan) | Instant, privacy-friendly, accurate age estimation. | 
| [Yoti Sign](/yoti/getting-started-sign) | Get Sign documents signed online using verified digital identities. | 
{% /table %}