v4.0/yoti/welcome.md
---
type: page
title: Welcome
listed: true
slug: welcome
description: 
index_title: Welcome
hidden: 
keywords: 
tags: 
---

We’re here to help you get your business set up with our secure, digital identity platform using one of our web SDKs or plugins. We also have two seamless mobile SDKs for iOS and Android.

Learn how to integrate our products and services that you and your business will benefit from. For a more detailed, in-depth explanation of each, please read through the appropriate developer docs.

---

## Yoti World

For more information on how Yoti can best work for your business, please visit Yoti World and explore some of the demos we've created on our different products.

**[Visit Yoti World](https://yoti.world/)**

---

## Products and services

Head over to our developer documentation for each our products. Here you will find:

- A technical overview
- Step by step instructions on how to integrate
- Web and Mobile examples
- Github pages

{% table %}
| Product | Description | 
| ---- | ---- | 
| **[Yoti Hub](https://developers.yoti.com/yoti/getting-started-hub)** | Onboard your organisation with Yoti in minutes. | 
| [Yoti App](https://developers.yoti.com/yoti-app) | Connect with already-verified customers. | 
| [Yoti Doc Scan](https://developers.yoti.com/yoti-doc-scan) | Identity verification embedded in your website or app. | 
| [Yoti Sign](https://developers.yoti.com/yoti-sign) | Get documents signed online using verified digital identities. | 
| [Yoti Age](https://developers.yoti.com/yoti-age) | Instant, privacy-friendly, accurate age verification. | 
| [Yoti Age Scan](/yoti-age-scan/getting-started) | Age estimation | 
| [Yoti MyFace](https://developers.yoti.com/yoti-myface) | Low-friction passive liveness detection service | 
{% /table %}